src/third_party/nasm/travis/test/timesneg.stderr
./travis/test/timesneg.asm:2: error: TIMES value -1 is negative
./travis/test/timesneg.asm:3: error: TIMES value -1 is negative
