src/third_party/nasm/travis/test/timesneg.asm
	bits 32
	times -1 db 0
	times -1 incbin "./travis/test/timesneg.asm"
